<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/drawer_menu_top">
        <item
            android:id="@+id/nav_item_1"
            android:icon="@drawable/ic_nav_myinfo"
            android:title="@string/nav_item_1"/>
        <item
            android:id="@+id/nav_item_2"
            android:icon="@drawable/ic_nav_write"
            android:title="@string/nav_item_2"/>
        <item
            android:id="@+id/nav_item_3"
            android:icon="@drawable/ic_nav_pick"
            android:title="@string/nav_item_3"/>
    </group>

    <group android:id="@+id/drawer_menu_bottom">
            <item
                android:id="@+id/nav_item_4"
                android:title="@string/nav_item_4"/>

            <item
                android:id="@+id/nav_item_5"
                android:title="@string/nav_item_5"/>
    </group>
</menu>